--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!Doctype html>
+<html>
+    <head>
+        <Title> A href Tag</Title>
+    </head>
+        <body>
+           <a href = "https://flatironschool.com"> flatironschool</a>
+        </body>
+
+ </html>
+    
